//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Season {
  id String [pk]
  name String [not null]
  startDate DateTime [not null]
  endDate DateTime [not null]
  board Board [not null]
  events Event [not null]
  posts Post [not null]
  seasonMemberships SeasonMembership [not null]
}

Table SeasonMembership {
  id String [pk]
  user User [not null]
  userId String [not null]
  season Season [not null]
  seasonId String [not null]
  isBoardMember Boolean [not null, default: false]
  joinedAt DateTime [default: `now()`, not null]
  role Role [not null, default: 'MEMBER']
  exitedAt DateTime
  exitReason String

  indexes {
    (userId, seasonId) [unique]
  }
}

Table User {
  id String [pk]
  name String [not null]
  nationalId String
  status UserStatus [not null, default: 'ACTIVE']
  email String [unique, not null]
  personalEmail String [not null]
  password String [not null]
  phone String [not null]
  university String
  faculty String
  ieeeId String
  formSubmissions CustomFormSubmission [not null]
  internalRole InternalRole
  internalRoleId String
  committee Committee
  committeeId String
  seasonMemberships SeasonMembership [not null]
  eventsAttendance EventAttendance [not null]
  eventsSesssionAttendance EventSessionAttendance [not null]
  attendances Attendance [not null]
  EventRegistration EventRegistration [not null]
  foodOrders FoodOrder [not null]
  boards Board [not null]
  posts Post [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
}

Table InternalRole {
  id String [pk]
  name String [unique, not null]
  users User [not null]
  permissions InternalRolePermission [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Permission {
  id String [pk]
  name String [unique, not null]
  description String
  group String [not null]
  roles InternalRolePermission [not null]

  indexes {
    (name, group) [unique]
  }
}

Table InternalRolePermission {
  id String [pk]
  roleId String [not null]
  permissionId String [not null]
  role InternalRole [not null]
  permission Permission [not null]

  indexes {
    (roleId, permissionId) [unique]
  }
}

Table Board {
  id String [pk]
  title String [not null]
  name String [not null]
  created DateTime [default: `now()`, not null]
  updated DateTime [default: `now()`, not null]
  socialLinks Json [not null]
  image String [not null]
  position FameRank [not null]
  user User
  userId String
  committee Committee
  committeeId String
  season Season [not null]
  seasonId String [not null]
}

Table Committee {
  id String [pk]
  name String [not null]
  description String
  leaders Board [not null]
  topics Json
  image String
  sessions Session [not null]
  members User [not null]
  files File [not null]
}

Table Session {
  id String [pk]
  name String [not null]
  hoursTaken Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  startedAt DateTime [default: `now()`]
  description String
  images String[] [not null]
  committee Committee [not null]
  committeeId String [not null]
  attendances Attendance [not null]
}

Table Attendance {
  id String [pk]
  session Session [not null]
  sessionId String [not null]
  user User [not null]
  userId String [not null]
  status AttendanceStatus [not null, default: 'ABSENT']
  attendedAt DateTime
}

Table Event {
  id String [pk]
  name String [not null]
  description String
  startDate DateTime [not null]
  endDate DateTime [not null]
  registrationStart DateTime [not null]
  registrationEnd DateTime [not null]
  private Boolean [not null, default: false]
  season Season [not null]
  seasonId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  category EventCategory [not null]
  location String
  locationLink String
  registrations EventRegistration [not null]
  forms CustomForm [not null]
  registrationForm CustomForm
  registrationFormId String [unique]
  coverImage String [not null]
  eventVideo String
  gallery EventMedia [not null]
  speakers EventSpeaker [not null]
  sponsors EventSponsor [not null]
  partners EventPartner [not null]
  eventDays EventDay [not null]
  attenandances EventAttendance [not null]
  restaurant EventRestaurant [not null]
  foodOrders FoodOrder [not null]
}

Table EventMedia {
  id String [pk]
  event Event [not null]
  caption String
  type MediaType [not null]
  eventId String [not null]
  url String [not null]
}

Table EventSpeaker {
  id String [pk]
  event Event [not null]
  eventId String [not null]
  speaker Speaker [not null]
  speakerId String [not null]
  photo SpeakerPhoto [not null]
  photoId String [not null]

  indexes {
    (eventId, speakerId) [unique]
  }
}

Table Sponsor {
  id String [pk]
  name String [not null]
  isSeasonSponsor Boolean [not null, default: false]
  isSeasonPartner Boolean [not null, default: false]
  images SponsorPhoto [not null]
  eventsSponsored EventSponsor [not null]
  eventsPartnered EventPartner [not null]
}

Table SponsorPhoto {
  id String [pk]
  sponsor Sponsor [not null]
  sponsorId String [not null]
  url String [not null]
  usedInSponsorship EventSponsor [not null]
  usedInPartnership EventPartner [not null]
}

Table EventSponsor {
  id String [pk]
  event Event [not null]
  eventId String [not null]
  sponsor Sponsor [not null]
  sponsorId String [not null]
  photo SponsorPhoto [not null]
  photoId String [not null]

  indexes {
    (eventId, sponsorId) [unique]
  }
}

Table EventPartner {
  id String [pk]
  event Event [not null]
  eventId String [not null]
  sponsor Sponsor [not null]
  sponsorId String [not null]
  photo SponsorPhoto [not null]
  photoId String [not null]

  indexes {
    (eventId, sponsorId) [unique]
  }
}

Table EventDay {
  id String [pk]
  date DateTime [not null]
  label String
  event Event [not null]
  eventId String [not null]
  agendaItems AgendaItem [not null]
}

Table EventRestaurant {
  id String [pk]
  coverImage String [not null]
  name String [not null]
  event Event [not null]
  eventId String [not null]
  menuImages String[] [not null]
  orders FoodOrderItem [not null]

  indexes {
    (id, eventId) [unique]
  }
}

Table FoodOrder {
  id String [pk]
  user User [not null]
  userId String [not null]
  event Event [not null]
  eventId String [not null]
  additionalNotes String
  price String
  status OrderStatus [not null, default: 'pending']
  createdAt DateTime [default: `now()`, not null]
  items FoodOrderItem [not null]
}

Table FoodOrderItem {
  id String [pk]
  order FoodOrder [not null]
  orderId String [not null]
  restaurant EventRestaurant [not null]
  restaurantId String [not null]
  item String [not null]
  quantity Int [not null, default: 1]
  notes String
}

Table AgendaItem {
  id String [pk]
  name String [not null]
  description String
  startTime DateTime [not null]
  endTime DateTime
  eventDay EventDay [not null]
  eventDayId String [not null]
  speaker Speaker [not null]
  speakerId String [not null]
  attendances EventSessionAttendance [not null]
}

Table EventAttendance {
  id String [pk]
  event Event [not null]
  eventId String [not null]
  user User [not null]
  userId String [not null]
  checkedInAt DateTime [default: `now()`, not null]
}

Table EventSessionAttendance {
  id String [pk]
  agendaItem AgendaItem [not null]
  agendaItemId String [not null]
  user User [not null]
  userId String [not null]
  attendedAt DateTime [default: `now()`, not null]
}

Table EventRegistration {
  id String [pk]
  event Event [not null]
  eventId String [not null]
  user User
  userId String
  status RegistrationStatus [not null, default: 'pending']
  qrcode String
  submittedAt DateTime [default: `now()`, not null]
  submission CustomFormSubmission
  submissionId String [unique]

  indexes {
    (eventId, userId) [unique]
  }
}

Table CustomForm {
  id String [pk]
  name String [not null]
  description String
  type FormType [not null, default: 'ANY']
  isRegistrationForm Boolean [not null, default: false]
  isPublic Boolean [not null, default: true]
  isPublished Boolean [not null, default: true]
  startDate DateTime [default: `now()`, not null]
  endDate DateTime
  event Event
  eventId String
  registrationFor Event
  responses CustomFormSubmission [not null]
  fields CustomFormField [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime
}

Table CustomFormField {
  id String [pk]
  label String [not null]
  name String [not null]
  type FormFieldType [not null]
  placeholder String
  required Boolean [not null, default: false]
  min Int
  max Int
  pattern String
  options String[] [not null]
  maxFileSize Int
  form CustomForm
  formId String
  responses CustomFormResponse [not null]
}

Table CustomFormSubmission {
  id String [pk]
  form CustomForm [not null]
  formId String [not null]
  user User
  userId String
  userEmail String
  submittedAt DateTime [default: `now()`, not null]
  responses CustomFormResponse [not null]
  registration EventRegistration

  indexes {
    (formId, userEmail) [unique]
  }
}

Table CustomFormResponse {
  id String [pk]
  value String [not null]
  field CustomFormField [not null]
  fieldId String [not null]
  submission CustomFormSubmission [not null]
  submissionId String [not null]
}

Table Speaker {
  id String [pk]
  name String [unique, not null]
  title String [not null]
  job String
  company String
  socialLinks Json [not null]
  bio String
  images SpeakerPhoto [not null]
  eventsUsedIn EventSpeaker [not null]
  agenda AgendaItem [not null]
}

Table SpeakerPhoto {
  id String [pk]
  speaker Speaker [not null]
  speakerId String [not null]
  photoUsedIn EventSpeaker [not null]
  url String [not null]
  caption String
}

Table Post {
  id String [pk]
  title String [unique, not null]
  content String [not null]
  author User [not null]
  authorId String [not null]
  season Season [not null]
  seasonId String [not null]
  private Boolean [not null, default: false]
  images String[] [not null]
  videos String[] [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Awards {
  id String [pk]
  title String [not null]
  winningDate DateTime [not null]
  image String [not null]
  place String [not null]
  description String [not null]
}

Table FAQs {
  id String [pk]
  question String [not null]
  answer String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Insight {
  id String [pk]
  icon String [not null]
  title String [not null]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table File {
  id String [pk]
  name String [not null]
  size Int [not null]
  uploadedDate DateTime [default: `now()`, not null]
  path String [not null]
  mimeType String
  committee Committee [not null]
  committeeId String [not null]
  entityType String [not null]
  entityId String [not null]
}

Enum FameRank {
  counselor
  excom
  head
  vice
}

Enum AttendanceStatus {
  ABSENT
  PRESENT
  LATE
}

Enum MediaType {
  GIF
  IMAGE
  VIDEO
}

Enum OrderStatus {
  pending
  rejected
  accepted
}

Enum RegistrationStatus {
  pending
  accepted
  rejected
}

Enum FormType {
  EVENT
  SURVEY
  FEEDBACK
  POST
  ANY
}

Enum EventCategory {
  event
  bootcamp
  workshop
  outing
}

Enum Role {
  ATTENDEE
  MEMBER
  HEAD
  EXCOM
}

Enum FormFieldType {
  TEXT
  EMAIL
  NUMBER
  SELECT
  DROPDOWN
  OPTIONS
  FILE
  DATE
  PARAGRAPH
}

Enum UserStatus {
  ACTIVE
  INACTIVE
}

Ref: SeasonMembership.userId > User.id

Ref: SeasonMembership.seasonId > Season.id

Ref: User.internalRoleId > InternalRole.id

Ref: User.committeeId > Committee.id

Ref: InternalRolePermission.roleId > InternalRole.id

Ref: InternalRolePermission.permissionId > Permission.id

Ref: Board.userId > User.id

Ref: Board.committeeId > Committee.id

Ref: Board.seasonId > Season.id

Ref: Session.committeeId > Committee.id

Ref: Attendance.sessionId > Session.id

Ref: Attendance.userId > User.id

Ref: Event.seasonId > Season.id

Ref: Event.registrationFormId - CustomForm.id

Ref: EventMedia.eventId > Event.id

Ref: EventSpeaker.eventId > Event.id

Ref: EventSpeaker.speakerId > Speaker.id

Ref: EventSpeaker.photoId > SpeakerPhoto.id

Ref: SponsorPhoto.sponsorId > Sponsor.id

Ref: EventSponsor.eventId > Event.id

Ref: EventSponsor.sponsorId > Sponsor.id [delete: Cascade]

Ref: EventSponsor.photoId > SponsorPhoto.id [delete: Cascade]

Ref: EventPartner.eventId > Event.id

Ref: EventPartner.sponsorId > Sponsor.id [delete: Cascade]

Ref: EventPartner.photoId > SponsorPhoto.id [delete: Cascade]

Ref: EventDay.eventId > Event.id

Ref: EventRestaurant.eventId > Event.id

Ref: FoodOrder.userId > User.id

Ref: FoodOrder.eventId > Event.id

Ref: FoodOrderItem.orderId > FoodOrder.id

Ref: FoodOrderItem.restaurantId > EventRestaurant.id

Ref: AgendaItem.eventDayId > EventDay.id [delete: Cascade]

Ref: AgendaItem.speakerId > Speaker.id

Ref: EventAttendance.eventId > Event.id

Ref: EventAttendance.userId > User.id

Ref: EventSessionAttendance.agendaItemId > AgendaItem.id

Ref: EventSessionAttendance.userId > User.id

Ref: EventRegistration.eventId > Event.id

Ref: EventRegistration.userId > User.id

Ref: EventRegistration.submissionId - CustomFormSubmission.id

Ref: CustomForm.eventId > Event.id

Ref: CustomFormField.formId > CustomForm.id [delete: Cascade]

Ref: CustomFormSubmission.formId > CustomForm.id [delete: Cascade]

Ref: CustomFormSubmission.userId > User.id

Ref: CustomFormResponse.fieldId > CustomFormField.id [delete: Cascade]

Ref: CustomFormResponse.submissionId > CustomFormSubmission.id [delete: Cascade]

Ref: SpeakerPhoto.speakerId > Speaker.id

Ref: Post.authorId > User.id

Ref: Post.seasonId > Season.id

Ref: File.committeeId > Committee.id